--- a/app/src/homecon-pages-menu.html
+++ b/app/src/homecon-pages-menu.html
@@ -136,9 +136,11 @@
 			},
 			_getNextOrder(items){
 				var order = 0;
-				items.forEach(function(item){
-					order = Math.max(order,item.order+1);
-				});
+				if(typeof items != 'undefined'){
+					items.forEach(function(item){
+						order = Math.max(order,item.order+1);
+					});
+				}
 				return order;
 			},
 		});
