--- a/app/src/widgets/homecon-widget-button.html
+++ b/app/src/widgets/homecon-widget-button.html
@@ -1,13 +1,13 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
-<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="../bower_components/iron-icons/editor-icons.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../bower_components/iron-icons/editor-icons.html">
 
-<link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../bower_components/paper-button/paper-button.html">
 
-<link rel="import" href="homecon-edit-dialog.html">
-<link rel="import" href="homecon-icon-select.html">
+<link rel="import" href="../homecon-edit-dialog.html">
+<link rel="import" href="../homecon-icon-select.html">
 
 
 <dom-module is="homecon-widget-button">
@@ -19,17 +19,15 @@
 			}
 			.edit{
 				position: absolute;
-				top: 0px;
-				right: 5px;
+				top: -10px;
+				right: -10px;
 				color: var(--button-text-color);
 			}
 		</style>
 		
-		<paper-button>test</paper-button>
+		<paper-button raised>{{config.label}}</paper-button>
 		
 		<div class="edit" hidden="{{!edit}}">
-			<paper-icon-button icon="icons:arrow-drop-up" noink="true" on-click="moveUp"></paper-icon-button>
-			<paper-icon-button icon="icons:arrow-drop-down" noink="true" on-click="moveDown"></paper-icon-button>
 			<paper-icon-button icon="editor:mode-edit" noink="true" on-click="openEditDialog"></paper-icon-button>
 		</div>
 		
@@ -46,6 +44,7 @@
 			properties: {
 				config: {
 					type: 'Object',
+					value: {'label':'new button','icon':'blank'},
 				},
 				edit:{
 					type: 'Boolean',
@@ -53,12 +52,14 @@
 				}
 			},
 			openEditDialog: function(){
-				//this.set('newTitle',this.page.title);
+				this.set('newLabel',this.config.label);
 				this.$.editDialog.open();
 			},
-			save: function(){
-				//this.set('page.title',this.newTitle);
+			save: function(e){
+				e.stopPropagation()
+				this.set('config.label',this.newLabel);
 				this.$.editDialog.close();
+				this.fire('save',this.config);
 			},
 			delete: function(){
 				this.fire('delete')
