--- a/app/src/homecon-widget.html
+++ b/app/src/homecon-widget.html
@@ -34,6 +34,9 @@
 					type: 'Object',
 					value: {'type':'homecon-widget-button','config':{}}
 				},
+				pagesectionIndex: {
+					type: 'Number'
+				},
 				edit: {
 					type: 'Boolean',
 					value: false,
