--- a/app/src/homecon-page-section.html
+++ b/app/src/homecon-page-section.html
@@ -2,6 +2,10 @@
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../bower_components/iron-collapse/iron-collapse.html">
 
+<link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
+<link rel="import" href="../bower_components/paper-menu/paper-menu.html">
+<link rel="import" href="../bower_components/paper-item/paper-item.html">
+
 <link rel="import" href="homecon-edit-dialog.html">
 
 <dom-module is="homecon-page-section">
@@ -13,9 +17,6 @@
 				width: 100%;
 
 				margin: 8px 0px;
-
-				border-radius: 5px;
-				box-shadow: 5px 5px 5px rgba(0,0,0,.15);
 			}
 			#header{
 				display: block;
@@ -44,35 +45,54 @@
 				background-color: var(--header-background-color-hover);
 			}
 			#content{
+				padding: 8px;
+			}
+			#content.collapsible{
 				background-color: var(--secondary-background-color);
 				border-color: var(--section-border-color);
-
 				border-style: solid;
 				border-width: 0px 1px 1px 1px;
 				border-radius: 0px 0px 5px 5px;
-
-				padding: 8px;
+			}
+			#content.raised{
+				background-color: var(--secondary-background-color);
+			    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+				border-radius: 5px;
+			}
+			.hideheader{
+				display: none !important;
 			}
 			.edit{
 				position: absolute;
 				top: 0px;
 				right: 5px;
+				color: var(--primary-text-color);
+			}
+			.edit.collapsible{
 				color: var(--header-text-color);
 			}
 		</style>
-		
-		<a id="header" class="header" on-click="changeState">			
+
+		<a id="header" class$="header {{_collapsibleClass(pagesection.type)}} {{_openedClass(opened)}}" on-click="changeState">			
 			{{pagesection.title}}
 		</a>
+
 		<iron-collapse opened="{{opened}}">
-			<div id="content">
+			<div id="content" class$="{{pagesection.type}}">
 				<content></content>
 			</div>
 		</iron-collapse>
-			
-		<paper-icon-button class="edit" icon="editor:mode-edit" noink="true" on-click="openEditDialog" hidden="{{!edit}}"></paper-icon-button>
+		
+		<paper-icon-button class$="edit {{pagesection.type}}" icon="editor:mode-edit" noink="true" on-click="openEditDialog" hidden="{{!edit}}"></paper-icon-button>
 
 		<homecon-edit-dialog id="editDialog" on-save="save">
+			<paper-dropdown-menu label="page section type">
+				<paper-menu class="dropdown-content" attr-for-selected="value" selected="{{newType}}">
+					<paper-item value="collapsible">collapsible</paper-item>
+					<paper-item value="raised">raised</paper-item>
+					<paper-item value="hidden">hidden</paper-item>
+				</paper-menu>
+			</paper-dropdown-menu>
 			<paper-input label="Title:" value="{{newTitle}}"></paper-input>
 			<paper-button raised on-tap="delete">Delete</paper-button>
 		</homecon-edit-dialog>
@@ -88,7 +108,7 @@
 				},
 				opened: {
 					type: 'Boolean',
-					value: true
+					value: true,
 				},
 				edit:{
 					type: 'Boolean',
@@ -97,18 +117,36 @@
 			},
 			changeState: function(){
 				this.opened = !this.opened;
-		    	this.toggleClass("opened", this.opened, this.$.header);
 			},
 			openEditDialog: function(){
+				this.newType = this.pagesection.type;
 				this.newTitle = this.pagesection.title;
 				this.$.editDialog.open();
 			},
 			save: function(e){
+				this.set('pagesection.type',this.newType);
 				this.set('pagesection.title',this.newTitle);
 				this.$.editDialog.close();
 			},
 			delete: function(){
 				this.fire('delete')
+			},
+			_openedClass: function(opened){
+				if(opened){
+					return "opened"
+				}
+				else{
+					return "";
+				}
+			},
+			_collapsibleClass: function(type){
+				if(type!='collapsible'){
+					this.opened = true;
+					return "hideheader"
+				}
+				else{
+					return "";
+				}
 			},
 		});
 	</script>
