--- a/app/src/homecon-page.html
+++ b/app/src/homecon-page.html
@@ -3,6 +3,10 @@
 <dom-module is="homecon-page">
 	<template>
 		<style>
+			:host{
+				display: block;
+				padding: 20px;
+			}
 		</style>
 		
 		<content>
