--- a/app/src/homecon-pages-menu-item.html
+++ b/app/src/homecon-pages-menu-item.html
@@ -58,8 +58,8 @@
 			<h1 class="title">{{page.title}}</h1>
 		</a>
 		
-		<div class="edit">
-			<paper-icon-button icon="editor:mode-edit" noink="true" on-click="openEditDialog" hidden="{{!edit}}"></paper-icon-button>
+		<div class="edit" hidden="{{!edit}}">
+			<paper-icon-button icon="editor:mode-edit" noink="true" on-click="openEditDialog"></paper-icon-button>
 		</div>
 		
 		
