--- a/app/src/homecon-menu-item.html
+++ b/app/src/homecon-menu-item.html
@@ -12,6 +12,7 @@
 				position: relative;
 				width: 100%;
 				color: var(--primary-text-color);
+				margin-left: 10px;
 			}
 			a.item{
 				display: block;
