--- a/app/src/homecon-pages-menu-item.html
+++ b/app/src/homecon-pages-menu-item.html
@@ -21,16 +21,16 @@
 				position: relative;
 				cursor: pointer;
 
-				background-color: var(--button-background-color);
+				background-color: var(--menu-item-background-color);
 				border-bottom: solid 1px;
-				border-color: var(--button-border-color);
+				border-color: var(--menu-item-border-color);
 
 				text-decoration: none;
 
 				height: 60px;
 			}
 			a.item:hover{
-				background-color: var(--button-background-color-hover);
+				background-color: var(--menu-item-background-color-hover);
 			}
 			a.item .icon{
 				height: 100%;
@@ -40,7 +40,7 @@
 				font-size: 18px;
 				font-family: sans-serif;
 				font-weight: 700;
-				color: var(--button-text-color);
+				color: var(--menu-item-text-color);
 				text-shadow: 0 1px 0 var(--text-shadow-color);
 				margin-left: 40px;
 				overflow: hidden;
@@ -49,7 +49,7 @@
 				position: absolute;
 				top: 0px;
 				right: 5px;
-				color: var(--button-text-color);
+				color: var(--menu-item-text-color);
 			}
 		</style>
 		
