--- a/app/src/homecon-app.html
+++ b/app/src/homecon-app.html
@@ -19,6 +19,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
+<link rel="import" href="../bower_components/web-socket/web-socket.html">
 
 <link rel="import" href="homecon-pages.html">
 <link rel="import" href="homecon-pages-menu.html">
@@ -102,6 +103,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 		<app-location route="{{route}}"></app-location>
 		<app-route route="{{route}}" pattern="/:page" data="{{routeData}}" tail="{{subroute}}"></app-route>
+		<web-socket url="ws://" auto json></web-socket>
+
 		<app-header-layout fullbleed>
 
 			<app-header fixed class$="[[menuClass]]">
